# love-kline

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.bat  test_kline.py  test_relation.py
app/: main.py
app/api/: analyze.py  export.py  kline.py  upload.py
app/schemas/: analyze.py
app/services/: deepseek.py  exporter.py  kline_generator.py  parser.py  relation.py  task_manager.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/api/: index.ts
frontend/src/components/: AnalysisCards.vue  KlineChart.vue  UploadArea.vue
frontend/src/styles/: main.css
